201801012
Introduces scheduler.sh to switch between rpidatv, siggen & FreqShow
Adds a Display option for the Element14_7
Resizes CAMMPEG-2 viewfinder for Element14_7 display
Enables IPTS output for MPEG-2 modes
Corrects higlights on Menu 2
Introduces FreqShow Spectrum display

201712181
Complete rewrite of touchscreen touch response function
Adds Menu Titles
Adds Switchable 480p Output in CAMMPEG-2 and ANALOGMPEG-2
Moves Caption and Adds Locator if 480p selected
Fixes "Oversize test cards in Carousel"
Enables IPTS input to DATV Express Output
Disables option to turn the Viewfinder Off 

201711270
Adds CARDMPEG-2 and CAMHDMPEG-2 modes
Properly scales PiCam MPEG-2 viewfinder for all resolutions
Fixes "Mode Buttons not diabled during TX" bug
Fixes "Test mode remains transmitting after deselection" bug

201711030
Adds Touchscreen Calibration
Enables Boot to SigGen on
Adds Display mode for upside down Waveshare 4
Fixes 1 Mhz steps bug in Sig Gen

201710280
Introduces an early version of the Signal Generator
Adds a DTX-1 Output Select button on Touchscreen Menu 2
Adds compilation scripts for users in ~/rpidatv/scripts/utils

201710081
Include RTL-FM functions on Menu 3
Add RTL-TCP Server
Adds voltage monitor to Info page
Re-enable DTX-1 Output for testing
Experimental support for signal monitoring at 2MS
Unattended streaming auto restarts after crashes
Transmission can be initiated and stopped with a GPIO switch
Makes video Snap and View modes work with no PiCam
Improves video View mode for Waveshare users

201708150
Introduces dedicated streaming mode with hardware on/off switch
Introduces still capture from composite video
Introduces preview mode for composite video (about 1.1 fps)
Introduces review of last 5 captured stills
Relocate MPEG-2 callsign caption to top left of image
Minor corrections to bit rates
Add audio detection for Webcam devices

201707311
Introduces an early version of Menu 3
Introduces a configuration information screen accessed from Menu 3