@@ -1,3 +1,6 @@
+201801060
+Introduces attenuator option for Portsdown output in SigGen
+
 201801012
 Introduces scheduler.sh to switch between rpidatv, siggen & FreqShow
 Adds a Display option for the Element14_7
